--- a/src/App.css
+++ b/src/App.css
@@ -511,4 +511,20 @@ footer {
   .recipe-header h2 {
     font-size: 1.5rem;
   }
+  
+  .recipe-image-large {
+    width: 100%;
+  }
 }
+
+@media (max-width: 400px) {
+  .input-container {
+    flex-direction: column;
+  }
+  .add-ingredient-btn {
+    width: 100%;
+  }
+}
+
+
+ 
